<?xml version='1.0' encoding='UTF-8'?>
<!--
Licensed to the Apache Software Foundation (ASF) under one or more contributor
license agreements.  See the NOTICE.txt file distributed with this work for
additional information regarding copyright ownership.  The ASF licenses this
file to you under the Apache License, Version 2.0 (the "License"); you may not
use this file except in compliance with the License.  You may obtain a copy of
the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
License for the specific language governing permissions and limitations under
the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.shangridocs</groupId>
  <artifactId>shangridocs-services</artifactId>
  <packaging>war</packaging>
  <version>0.1-SNAPSHOT</version>  
  <name>Shangridocs Web Services</name>
  <description>Services for connecting to PubMed, Wikipedia, and Tika cTAKES for Shangridocs.</description>
  <build>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/java</directory>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <filtering>false</filtering>
                <directory>src/test/java</directory>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>  
    <plugins>
        <plugin>
            <groupId>org.apache.tomcat.maven</groupId>
            <artifactId>tomcat7-maven-plugin</artifactId>
            <version>2.2</version>
            <configuration>
                <port>8181</port>
                <systemProperties>
                    <CATALINA_OPTS>-Djava.awt.headless=true -Dfile.encoding=UTF-8
                                    -server -Xms1536m -Xmx1536m
                                    -XX:NewSize=256m -XX:MaxNewSize=256m -XX:PermSize=256m
                                    -XX:MaxPermSize=512m -XX:+DisableExplicitGC
                                    -XX:+UseConcMarkSweepGC
                                    -XX:+CMSIncrementalMode
                                    -XX:+CMSIncrementalPacing
                                    -XX:CMSIncrementalDutyCycleMin=0
                                    -XX:-TraceClassUnloading
                    </CATALINA_OPTS>
                </systemProperties>
                <contextFile>${basedir}/src/main/webapp/META-INF/context.xml</contextFile>
                <path>/${project.build.finalName}</path>  
            </configuration>        
        </plugin>   
       <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>3.3</version>
	        <configuration>
	          <source>1.7</source>
	          <target>1.7</target>
	        </configuration>
	       </plugin>
  </plugins>
  </build>
  <dependencies>
    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.4</version>
       <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-frontend-jaxrs</artifactId>
      <version>3.0.3</version>
    </dependency>   
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-rs-client</artifactId>
      <version>3.0.3</version>
    </dependency>  
    <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.4</version>
    </dependency>
    <dependency>
        <groupId>com.googlecode.json-simple</groupId>
        <artifactId>json-simple</artifactId>
        <version>1.1.1</version>
    </dependency>   
    <dependency>
      <groupId>org.apache.oodt</groupId>
      <artifactId>cas-metadata</artifactId>
      <version>0.10</version>
    </dependency>   
	<dependency>
	  <groupId>net.sourceforge.htmlunit</groupId>
	  <artifactId>htmlunit</artifactId>
	  <version>2.18</version>
	</dependency>    
  </dependencies>

</project>

